fix: manejar respuesta XML del servicio externo con detección automática de formato